# gemini-cli-voice

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  GEMINI.md  LICENSE  README.md  config.json  eslint.config.js  gemini-extension.json  launcher.js  package-lock.json  package.json  pyproject.toml  test_find_python.js  test_mcp.js  tool_code.py  tsconfig.json  webpack.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-cd.yml
commands/voice/: disable.toml  enable.toml  model.toml  pitch.toml
docs/: developer.md
docs/superpowers/plans/: 2026-03-31-extension-gallery-fix.md
scripts/: cleanup-releases.js  deploy.js  push-version.js  terminal.js  update-version.js
src/: config.ts  constants.ts  paths.ts  piper.ts  tool_code.ts
src/gemini_cli_voice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gemini_voice/: config.py  mcp.py  paths.py  piper.py
tests/: test_logic.py  test_paths.py
